--- a/css/common.css
+++ b/css/common.css
@@ -9,4 +9,15 @@
 :root {
     --background-color: #eee;
     --button-color: #f1c40f;
+    --text-color: black;
+    scroll-behavior: smooth;
+    font-family: 'Lato', sans-serif;
+}
+.container{
+    max-width: 950px;  
+    margin: auto; 
+}
+img{
+    display: block;
+    width: 100%;
 }
