--- a/css/header.css
+++ b/css/header.css
@@ -1,22 +1,37 @@
-#header{
+#header {
     margin-top: 15px;
 }
-.header__logo{
+.header__logo {
     width: 320px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-#header-img{
+#header-img {
     width: 100px;
 }
-#nav-bar{
-    display: flex; 
-}
-.nav-link{
+.nav-link {
     display: block;
     text-decoration: none;
     color: var(--text-color);
+    font-size: 1.5rem 
 }
+.nav-link:hover {
+    text-decoration: underline;
+}
+@media (min-width: 600px){
+    #header > .container {
+        display: flex;
+    }
+    #nav-bar{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex: 1;
+    }
+    .nav-link{
+        font-size: 1rem;
+    }
 
+}
