--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,5 @@
 @import url(together.css);
 @import url(why-we.css);
 @import url(why-it.css);
+@import url(donate-us.css);
+@import url(footer.css);
